# fro-wang-academic-tools-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: CONVENTIONS.md  DECISIONS.md  GLOSSARY.md  HOW_TO_CLONE_THIS_TEMPLATE.md  OVERVIEW.md  README.md  README_SYSTEM.md  RUNBOOK.md  STATUS.md  deepseek_config_guide.md  mcp_client_config_guide.md  mineru_config_guide.md  zotero_config_guide.md
docs/archive/: README.md
src/academic_tools/: __init__.py  __main__.py  config.py  server.py
src/academic_tools/models/: __init__.py  metadata.py  paper.py  queue.py  structure.py
src/academic_tools/prompts/: metadata_extraction.md  section_extraction.md  summary_report.md  translation.md
src/academic_tools/shared/: __init__.py  llm_client.py  prompt_utils.py  utils.py
src/academic_tools/tools/: __init__.py  arxiv.py  header_footer.py  metadata.py  ocr.py  pipeline.py  rename.py  structure.py  summary.py  translate.py  zotero.py
src/academic_tools/zotero/: __init__.py  bibtex_client.py  client.py  utils.py
tests/: test_arxiv_download.py  test_pipeline_status_persistence.py  test_structure_schema.py  test_zotero_client.py  test_zotero_local_diagnostics.py  test_zotero_tools_exposed.py
tests/integration/: test_zotero_live_tools.py
